--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF_8">
+    <meta charset="UTF-8">
     <title>Basic Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <h1>Maxwell Weidmer</h1>
+        <div class="divHeader">
+            <div class="divName">
+                <h1>Maxwell Weidmer</h1>
+            </div>
+            
+            <div class="divPList">
+                <ul>
+                    <li>About</li>
+                    <li id="liMiddle">Portfolio</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
 
-            <ul>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
-            </ul>
         </div>
     </header>
 
-    <div>
+    <div class="divMContent">
+        
         <h1>About Me</h1>
 
         <hr>
@@ -40,9 +46,7 @@
     </div>
 
     <footer>
-
-
-
+        Copyright &copy;
     </footer>
 </body>
 </html>
