--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF_8">
+    <meta charset="UTF-8">
     <title>Basic Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
