--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
             <h1>Maxwell Weidmer</h1>
 
             <ul>
-                <li>About</li>
-                <li>Portfolio</li>
+                <li><a href="index.html" target="_blank">About</a></li>
+                <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
                 <li>Contact</li>
             </ul>
         </div>
