--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
             <h1>Maxwell Weidmer</h1>
 
             <ul>
-                <li>About</li>
+                <li><a href="index.html">About</a></li>
                 <li>Portfolio</li>
-                <li>Contact</li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
