--- a/portfolio.html
+++ b/portfolio.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Basic Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <h1>Maxwell Weidmer</h1>
+        <div class="divHeader">
+            <div class="divName">
+                <h1>Maxwell Weidmer</h1>
+            </div>
 
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li>Portfolio</li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <div class="divPList">
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li>Portfolio</li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
-    <div>
-        <h1>Portfolio</h1>
+    <div class="divMContent">
+        <div class="divInsideM">
+            <h1 class="mContHead">Portfolio</h1>
 
-        <hr>
+            <hr>
 
-        <div>
-            <img src="#" alt="Placeholder">
-            <div>Sound Project</div>
+            <div>
+                <img src="#" alt="Placeholder">
+                <div>Sound Project</div>
+            </div>
+
+            <div>
+                <img src="#" alt="Placeholder">
+                <div>iPad Project</div>
+            </div>
+
+            <div>
+                <img src="#" alt="Placeholder">
+                <div>TV Project</div>
+            </div>
+
+            <div>
+                <img src="#" alt="Placeholder">
+                <div>Linux Project</div>
+            </div>
         </div>
 
-        <div>
-            <img src="#" alt="Placeholder">
-            <div>iPad Project</div>
-        </div>
-    
-        <div>
-            <img src="#" alt="Placeholder">
-            <div>TV Project</div>
-        </div>
-
-        <div>
-            <img src="#" alt="Placeholder">
-            <div>Linux Project</div>
-        </div>
     </div>
 
     <footer>
@@ -51,4 +60,5 @@
 
     </footer>
 </body>
+
 </html>
