completed styling for contact page form inputs

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
             <h1 class="mContHead">About Me</h1>
 
             <hr>
+            <br>
 
             <div id="profilePic">
                 <img src="assets/images/max-weidmer.jpg" alt="Max Weidmer"height="200px">
             </div>
 
-            <div>
-                <p id="p1">
+            <div id="p1">
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque iaculis tellus porttitor mollis
                     aliquam. Praesent nec scelerisque risus. Maecenas ac felis id quam vulputate ornare et vitae odio.
                     Aenean sed placerat erat. Ut ac aliquam nibh. Morbi sed sem sit amet nibh fermentum mollis a ut
