--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
             <h1 class="mContHead">Portfolio</h1>
 
             <hr>
+            <br>
 
             <div>
                 <img src="#" alt="Placeholder">
@@ -55,9 +56,7 @@
     </div>
 
     <footer>
-
-
-
+        Copyright &copy;
     </footer>
 </body>
 
