--- a/contact.html
+++ b/contact.html
@@ -30,30 +30,29 @@
             <h1 class="mContHead">Contact</h1>
 
             <hr>
+            <br>
 
             <form>
                 Name
                 <br>
-                <input type="text" name="Name">
-                <br>
+                <input class="textInputs" type="text" name="Name">
+                <br><br>
                 Email
                 <br>
-                <input type="text" name="Email">
-                <br>
+                <input class="textInputs" type="text" name="Email">
+                <br><br>
                 Message
                 <br>
-                <input type="text" name="Message">
-                <br>
-                <input type="submit" value="Submit">
+                <input class="textInputs" id="message" type="text" name="Message">
+                <br><br>
+                <input id="button" type="submit" value="Submit">
             </form>
         </div>
 
     </div>
 
     <footer>
-
-
-
+        Copyright &copy;
     </footer>
 </body>
 
