fixed some issues with navbar link (spacing, underline, borders,page indication)

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 
             <div class="divPList">
                 <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li>Contact</li>
+                    <li><a class="navLinks" href="index.html">About</a></li>
+                    <li class="liMiddle"><a class="navLinks" href="portfolio.html">Portfolio</a></li>
+                    <li id="contactLink">Contact</li>
                 </ul>
             </div>
         </div>
