--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <div class="divPList">
                 <ul>
-                    <li>About</li>
-                    <li id="liMiddle"><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li id="aboutLink">About</li>
+                    <li class="liMiddle"><a class="navLinks" href="portfolio.html">Portfolio</a></li>
+                    <li><a class="navLinks" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <br>
 
             <div id="profilePic">
-                <img src="assets/images/max-weidmer.jpg" alt="Max Weidmer"height="200px">
+                <img src="assets/images/max-weidmer.jpg" alt="Max Weidmer" height="200px">
             </div>
 
             <div id="p1">
