--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
 
             <div class="divPList">
                 <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li>Portfolio</li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a class="navLinks" href="index.html">About</a></li>
+                    <li id="portfolioLink" class="liMiddle">Portfolio</li>
+                    <li><a class="navLinks" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
