put portfolio images on page and resized them to something reasonable

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,29 +26,29 @@
     </header>
 
     <div class="divMContent">
-        <div class="divInsideM">
+        <div class="divInsideM wFont" id="portCont">
             <h1 class="mContHead">Portfolio</h1>
 
             <hr>
             <br>
 
             <div>
-                <img src="#" alt="Placeholder">
+                <img class="imgSize" src="assets/images/headphones.jpg" alt="Headphones">
                 <div>Sound Project</div>
             </div>
 
             <div>
-                <img src="#" alt="Placeholder">
+                <img class="imgSize" src="assets/images/ipad.jpg" alt="iPad">
                 <div>iPad Project</div>
             </div>
 
             <div>
-                <img src="#" alt="Placeholder">
+                <img class="imgSize" src="assets/images/tv.jpg" alt="TV">
                 <div>TV Project</div>
             </div>
 
             <div>
-                <img src="#" alt="Placeholder">
+                <img class="imgSize" src="assets/images/ubuntu-laptop.jpg" alt="Ubuntu Laptop">
                 <div>Linux Project</div>
             </div>
         </div>
