positioned portfolio images, and added labels

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,24 +32,24 @@
             <hr>
             <br>
 
-            <div>
+            <div class="imgDiv">
                 <img class="imgSize" src="assets/images/headphones.jpg" alt="Headphones">
-                <div>Sound Project</div>
+                <div class="imgLabel">Sound thing</div>
             </div>
 
-            <div>
+            <div class="imgDiv imgRight">
                 <img class="imgSize" src="assets/images/ipad.jpg" alt="iPad">
-                <div>iPad Project</div>
+                <div class="imgLabel">iPad thing</div>
             </div>
 
-            <div>
+            <div class="imgDiv">
                 <img class="imgSize" src="assets/images/tv.jpg" alt="TV">
-                <div>TV Project</div>
+                <div class="imgLabel">TV thing</div>
             </div>
 
-            <div>
+            <div class="imgDiv imgRight">
                 <img class="imgSize" src="assets/images/ubuntu-laptop.jpg" alt="Ubuntu Laptop">
-                <div>Linux Project</div>
+                <div class="imgLabel">Linux thing</div>
             </div>
         </div>
 
