added about me actual content instead of lorem

--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
             <br>
 
             <div id="profilePic">
-                <img src="assets/images/max-weidmer.jpg" alt="Max Weidmer" height="200px">
+                <img src="assets/images/max-weidmer.jpg" alt="Max Weidmer" height="200">
             </div>
 
-            <p id="p1">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque iaculis tellus porttitor mollis
-                aliquam. Praesent nec scelerisque risus. Maecenas ac felis id quam vulputate ornare et vitae odio.
-                Aenean sed placerat erat. Ut ac aliquam nibh. Morbi sed sem sit amet nibh fermentum mollis a ut
-                est. Praesent sed est scelerisque, imperdiet lacus aliquet, vulputate dui.
+            <p class="pImg">
+                My name is Max Weidmer. I was born in New Orleans, Louisiana and at the age of 5 I moved overseas with
+                my family to Venezuela, and stayed overseas for the next 13 years, living in Indonesia, the UK, and
+                Canada before returning to the US to attend university at UCSB. After a year as a physics major, I’ve
+                decided to take a gap year.
             </p>
 
+            <p class="pImg">
+                I enjoy reading, running, video games, cooking, and photography. Currently, I’m taking the opportunity
+                to learn something almost completely new in web development.
+            </p>
 
             <p>
-                Morbi faucibus magna aliquam, tristique sapien eget, blandit enim. Vivamus iaculis, turpis sed
-                hendrerit aliquet, leo urna porttitor risus, ut sodales lacus metus aliquet sem. Pellentesque non justo
-                dui. Morbi at turpis ut ipsum bibendum blandit. Phasellus vulputate magna eget enim vulputate volutpat.
-                Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                Couldn't think of something to write but needed a paragraph here to show that the positioning is
+                correct and that the paragraph will clear the picture.
             </p>
         </div>
     </div>
