adding psychic game project to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,15 @@
 
             <hr>
             <br>
+            <a href="https://mxweidmer.github.io/Psychic-Game/" target="_blank">
+                <div class="imgDiv">
+                    <img class="imgSize"
+                        src="assets/images/gamescreen.JPG"
+                        alt="Psychic Game">
+                    <div class="imgLabel">Psychic Game</div>
+                </div>
+            </a>
 
-            <div class="imgDiv">
-                <img class="imgSize" src="assets/images/headphones.jpg" alt="Headphones">
-                <div class="imgLabel">Sound thing</div>
-            </div>
 
             <div class="imgDiv imgRight">
                 <img class="imgSize" src="assets/images/ipad.jpg" alt="iPad">
