adding crystal collector to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,18 +33,17 @@
             <br>
             <a href="https://mxweidmer.github.io/Psychic-Game/" target="_blank">
                 <div class="imgDiv">
-                    <img class="imgSize"
-                        src="assets/images/gamescreen.JPG"
-                        alt="Psychic Game">
+                    <img class="imgSize" src="assets/images/gamescreen.JPG" alt="Psychic Game">
                     <div class="imgLabel">Psychic Game</div>
                 </div>
             </a>
 
-
-            <div class="imgDiv imgRight">
-                <img class="imgSize" src="assets/images/ipad.jpg" alt="iPad">
-                <div class="imgLabel">iPad thing</div>
-            </div>
+            <a href="https://mxweidmer.github.io/Crystal-Collector-Game/" target="_blank">
+                <div class="imgDiv imgRight">
+                    <img class="imgSize" src="assets/images/crystal-game.JPG" alt="Crystal Collector Game">
+                    <div class="imgLabel">Crystal Collector</div>
+                </div>
+            </a>
 
             <div class="imgDiv">
                 <img class="imgSize" src="assets/images/tv.jpg" alt="TV">
