adding trivia game to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,12 @@
                 </div>
             </a>
 
-            <div class="imgDiv">
-                <img class="imgSize" src="assets/images/tv.jpg" alt="TV">
-                <div class="imgLabel">TV thing</div>
-            </div>
+            <a href="https://mxweidmer.github.io/Trivia-Game/" target="_blank">
+                <div class="imgDiv">
+                    <img class="imgSize" src="assets/images/trivia-game.JPG" alt="Trivia Game">
+                    <div class="imgLabel">Trivia Game</div>
+                </div>
+            </a>
 
             <div class="imgDiv imgRight">
                 <img class="imgSize" src="assets/images/ubuntu-laptop.jpg" alt="Ubuntu Laptop">
