adding giftastic to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,12 @@
                 </div>
             </a>
 
-            <div class="imgDiv imgRight">
-                <img class="imgSize" src="assets/images/ubuntu-laptop.jpg" alt="Ubuntu Laptop">
-                <div class="imgLabel">Linux thing</div>
-            </div>
+            <a href="https://mxweidmer.github.io/GifTastic-Page/" target="_blank">
+                <div class="imgDiv imgRight">
+                    <img class="imgSize" src="assets/images/giftastic.JPG" alt="GifTastic-Page">
+                    <div class="imgLabel">GifTastic</div>
+                </div>
+            </a>
         </div>
 
     </div>
