added train scheduler to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,13 @@
                     <div class="imgLabel">GifTastic</div>
                 </div>
             </a>
+
+            <a href="https://mxweidmer.github.io/Train-Scheduler/" target="_blank">
+                <div class="imgDiv">
+                    <img class="imgSize" src="assets/images/train.JPG" alt="Trivia Game">
+                    <div class="imgLabel">Train Scheduler</div>
+                </div>
+            </a>
         </div>
 
     </div>
